# 8x8-hdmi-matrix-hub

./: .dockerignore  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cec_macros.json  docker-compose.yml  driver.json  mock-server.js  package-lock.json  package.json  profiles.json  pyproject.toml  requirements-uc.txt  requirements.txt  run.py  run_server.py  scenes.json  setup.py
config/: profiles.json
docs/: API_REFERENCE.md  BK-808 Control4 Driver.c4z  CEC_CONTROL_ARCHITECTURE.md  DOCKER.md  FLIC_SETUP.md  HOME_ASSISTANT.md  IR_CONTROL_ROADMAP.md  MASTER_INDEX.md  OREI_API_COMMANDS.md  PROJECT_ROADMAP.md  README.md  UNFOLDED_CIRCLE_INTEGRATION_GUIDE.md  WEB_UI_IMPLEMENTATION_PLAN.md  remote3-rest-core-api.md  remote3-websocket-core-api.md  remote3-websocket-integration-api.md
docs/BK-808 Control4 Driver/: documentation.rtf  driver.lua  (+1 more)
noun-project-tool/: README.md  client.js  package-lock.json  package.json  proxy_response.json  temp_response.json
scripts/: convert-icons-to-svg.js  discover_api.py  restart_driver.ps1  run_webui_test.py  start_webui.py  test_telnet.py  test_telnet_client.py
src/: __init__.py  cec_commands.py  cec_macros.py  cec_resolver.py  config.py  driver.py  orei_matrix.py  telnet_client.py
tests/: __init__.py  conftest.py  test_all_features.py  test_all_formats.py  test_cec_macros.py  test_cec_resolver.py  test_config.py  test_connection.py  test_http_vs_https.py  test_input_names.py  test_manual.py  test_orei_matrix.py  test_rest_api.py
tools/: scrape-shaper-icons.ps1
web/: index.html  kiosk.html
(+86 files in other folders)
